--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.71'
+    ext {
+        kotlin_version = '1.2.71'
+        realm_version = '5.7.0'
+        rxjava_version = '2.2.3'
+        rxandroid_version = '2.1.0'
+    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath "io.realm:realm-gradle-plugin:$realm_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
