--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
           package="br.com.tcastro.trabalho2">
 
     <application
-            android:allowBackup="true"
             android:name=".App"
+            android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
@@ -22,6 +22,8 @@
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity android:name=".TabsActivity">
+        </activity>
+        <activity android:name=".CadastroActivity">
         </activity>
     </application>
 
