--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,12 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.2.71'
+        kotlin_version = '1.3.0'
         realm_version = '5.7.0'
         rxjava_version = '2.2.3'
         rxandroid_version = '2.1.0'
+        rxkotlin_version = '2.3.0'
+        lifecycle_version = '1.1.1'
     }
     repositories {
         google()
